# tee_tee_dev_kit

./: README.md  README_zh.md
ddk/: README.md  README_zh.md
ddk/demo/src/rust_drv_test_module/: Cargo.toml  build.sh  dyn_perm.xml  manifest.txt
ddk/demo/src/rust_drv_test_module/src/: lib.rs
ddk/rust_drv_apis/: Cargo.toml  clippy.sh  rustdoc.sh
docs/TEE_API/: Readme-CN.md  _____t_e_e___operation_handle.md  _____t_e_e___operation_info.md  _list_node.md  _t_e_e___operation_info_key.md  _t_e_e___operation_info_multiple.md  _t_e_e_c___context.md  _tee_arith.md  (+31 more)
for_rust_scan/: OAT.xml
for_rust_scan/rust_huk_service/: CMakeLists.txt  Cargo.toml  build.sh  rust_features.cmake
for_rust_scan/rust_huk_service/.cargo/: config.toml
for_rust_scan/rust_huk_service/src/: huk_derive_takey.rs  huk_derive_takey2.rs  huk_service_ffi.rs  lib.rs
for_rust_scan/rust_huk_service/test/: dt_test.sh
for_rust_scan/rust_huk_service/test/ut/: mod.rs  stub.rs  ut_huk_derive_takey.rs
for_rust_scan/rust_perm_service/: CMakeLists.txt  Cargo.toml  build.sh  rust_features.cmake
for_rust_scan/rust_perm_service/src/: dlist.rs  lib.rs  perm_srv_common_ffi.rs  permission_service_ffi.rs
for_rust_scan/rust_perm_service/src/perm_srv_elf_verify/: mod.rs  perm_srv_elf_verify_cmd.rs  ta_lib_img_unpack_ffi.rs  tee_comm_elf_verify_ffi.rs  tee_comm_elf_verify_v3v5.rs  tee_elf_verify_ffi.rs
for_rust_scan/rust_perm_service/src/perm_srv_ext_mf/: mod.rs  tee_load_ext_mf.rs  tee_load_ext_mf_ffi.rs
for_rust_scan/rust_perm_service/src/perm_srv_ta_config/: perm_srv_ta_config.rs  perm_srv_ta_config_cmd.rs  perm_srv_ta_config_ffi.rs  ta_config_builder_ffi.rs
for_rust_scan/rust_perm_service/test/: dt_test.sh
for_rust_scan/rust_perm_service/test/ut/: mod.rs  stub.rs  ut_perm_srv_elf_verify.rs  ut_perm_srv_ext_mf.rs  ut_perm_srv_ta_config.rs
sdk/: CHANGELOG  README.md  README_zh.md
sdk/src/rust_apis/: Cargo.toml  clippy.sh  rustdoc.sh
sdk/src/rust_apis/src/: alloc.rs  core.rs  defines.rs  error.rs  ext_api.rs  lib.rs  panic.rs  parameters.rs  print.rs  security.rs  tee_defines.rs  uuid.rs
sdk/src/rust_apis/src/arith_api/: arith_api_ffi.rs  mod.rs
sdk/src/rust_apis/src/crypto_api/: crypto_api_ffi.rs  mod.rs
sdk/src/rust_apis/src/drv_client_api/: drv_client_api_ffi.rs  mod.rs
sdk/src/rust_apis/src/msp/: mod.rs  msp_ffi.rs
sdk/src/rust_apis/src/property/: mod.rs  property_ffi.rs
sdk/src/rust_apis/src/rpmb_fcntl/: mod.rs  rpmb_fcntl_ffi.rs
sdk/src/rust_apis/src/sec_flash/: mod.rs  sec_flash_ffi.rs
sdk/src/rust_apis/src/time/: mod.rs  time_ffi.rs
sdk/src/rust_apis/src/trusted_storage_api/: generic_object_ffi.rs  mod.rs  persistent_object_ffi.rs  transient_object_ffi.rs
sdk/test/TA/rust_helloworld/: Cargo.toml  build.sh  configs.xml
sdk/test/TA/rust_helloworld/.cargo/: config.toml
sdk/test/TA/rust_helloworld/src/: lib.rs
(+80 files in other folders)
