[package]
name = "rust_apis"
version = "0.1.0"
edition = "2021"
description = "teeos rust sdk"

[dependencies]

[features]
default = []
no_std = []
api_level1 = []
api_level2 = []
api_level3 = []
gp_support = []
log_level_error = []
log_level_warn = []
log_level_info = []
log_level_debug = []
log_level_verbo = []