[workspace]

[package]
name = "rust_helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_apis = { path = "../../../src/rust_apis", features = ["no_std"]}

[features]
api_level1 = []
api_level2 = []
api_level3 = []

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = "fat"
debug = false
strip = "symbols"
codegen-units = 1
